# nas

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/: generate-self-signed-cert.sh
src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  realtime.rs  routes.rs  storage.rs
web/: build.ts  components.json  index.html  package.json  vite.config.ts
web/src/: main.tsx  shadcn-tailwind.css  styles.css
web/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  sonner.tsx
